# kube-resource-extra

./: Cargo.toml  README.md
src/: lib.rs
src/istio/: destination_rule.rs  envoy_filter.rs  gateway.rs  mod.rs  virtual_service.rs
src/istio/client_tls_settings/: mod.rs
src/istio/connection_pool_settings/: http_settings.rs  mod.rs  tcp_settings.rs
src/istio/load_balancer_settings/: mod.rs
src/istio/load_balancer_settings/consistent_hash_lb/: mod.rs
src/istio/locality_load_balancer_settings/: mod.rs
src/istio/traffic_policy/: mod.rs
