[package]
name = "kube-resource-extras"
version = "0.1.0"
edition = "2021"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
description = "Kubernetes Resource Extras"
readme = "README.md"
categories = [""]
keywords = ["Kubernetes", "CustomResourceDefinition"]
license = "MIT"
repository = "https://github.com/nebula-technologies/kube-resource-extra"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
istio = []

[dependencies]
serde = "*"
serde_derive = "*"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_22"] }
kube-core = "0.71.0"
kube = { version = "0.71.0", features = ["runtime","derive", "admission"] }

[dev-dependencies]
tokio = {version = "1.18.2", features = ["rt"]}